testing bcrypt before implementing passport or JWT

--- a/TODO.TXT
+++ b/TODO.TXT
@@ -1,3 +1,3 @@
 4) Work on frontend UI website login screen
 5) connect UI to backend for accessing user information
-6) add access token for admins to access adminstration
+6) add access token for admins to access adminstration JWT/Passport
